Fix email related issue

--- a/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Layout.cshtml
+++ b/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Layout.cshtml
@@ -38,7 +38,8 @@
                     </div>
                 </div>  <!-- End of Content Wrapper -->
             </div>
-            <partial name="AdminLTE/_Scripts" />
-            @RenderSection("Scripts", required: false)
+        </div>
+        <partial name="AdminLTE/_Scripts" />
+        @RenderSection("Scripts", required: false)
 </body>
 </html>
