--- a/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Styles.cshtml
+++ b/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Styles.cshtml
@@ -1,7 +1,7 @@
 ﻿ <!-- Font Awesome -->
 <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
 <!-- Ionicons -->
-<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="~/lib/ionicons/css/collection/components/icon/icon.css">
 <!-- overlayScrollbars -->
 <link rel="stylesheet" href="~/css/adminlte.min.css">
 <!-- Google Font: Source Sans Pro -->
