--- a/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Layout.cshtml
+++ b/AdminLTE.StarterKit/Pages/Shared/AdminLTE/_Layout.cshtml
@@ -39,7 +39,8 @@
                 </div>  <!-- End of Content Wrapper -->
             </div>
         </div>
-        <partial name="AdminLTE/_Scripts" />
-        @RenderSection("Scripts", required: false)
+    </div>
+    <partial name="AdminLTE/_Scripts" />
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
